# Complex-plot

./: .gitignore  .gitmodules  CMakeLists.txt  test.ppm
.github/workflows/: c-cpp.yml
include/: libcplot.hpp
main/include/: bmp_img.hpp  complex_colour.hpp  libcplot.hpp  parsing.hpp  ppm_img.hpp
main/src/: CMakeLists.txt  main.cpp
src/: libcplot.cpp
